syntax = "proto3";

package com.road.yishi.proto.battle;

message AwakeMsg {
  repeated int32 awake = 1;
}
